apps/base/coder/controllers/httproute.yaml
---
# Adapted from https://github.com/goharbor/harbor-helm/blob/main/templates/ingress/ingress.yaml

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: coder
  namespace: coder
spec:
  parentRefs:
    - name: cilium-gateway
      namespace: gateway
  hostnames:
    - coder.benwoodward.cloud
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: coder
          port: 80
